<resources>
    <string name="app_name">बेगूँ दर्शन</string>
        <string name="editorialtitle">एक छोटा सा प्रयास \n</string>
    <string name="rules">1. बेगूँ दर्शन का उद्देश्य जन मानस की भावनाओं और हो रही महत्वपूर्ण घटनाओं को जल्दी से जल्दी पहुंचने की दृष्टि से बनाया गया है | \n 2. बेगूँ दर्शन केवल बेगूँ और इसके आसपास होने वाली घटनाओं और अन्य महत्वपूर्ण समाचारो को आपके पास जल्दी से जल्दी लाने का प्रयास करेगा | \n 3. अगर आपको बेगूँ दर्शन पर कोई सामग्री ना दिखे तो एक बार अपना इंटरनेट चेक कर लें या फिर एप को फिर से बंद कर के शुरू करें | \n 4. इस पर समय समय पर सामग्री डाली जाती रहेगी उसके लिए आप स्क्रीन को ऊपर से नीचे खींचे जिससे आप लेटेस्ट अपडेट पढ़ सकें | \n 5. बेगूँ दर्शन द्वारा आप अपनी या अपने बच्चों की प्रतिभा भी साझा कर सकते है जैसे की उनकी कोई कविता, चित्रकारी, कहानी इत्यादि | इसके लिए आप begudarshan@gmail.com पर ईमेल कर सकते है, अगर आप कोई संपादकीय लेख लिखना चाहते है तो ईमेल द्वारा संपर्क करें  \n 6 . आप अपने सुझाव या शिकायत भी begudarshan@gmail.com पर भेज सकते है | \n 7. अगर आप बेगूँ दर्शन टीम को कोई समाचार या सूचना भेजना चाहते हैं तो आप begudarshan@gmail.com पर ईमेल करें या फिर +91 96670 91127,  +91 95874 43904 अथवा  +91 94147  31917 पर whatsapp करें | \n 8. किसी भी प्रकार की कोई भी फेक न्यूज़ एप पर स्वीकार नहीं की जायेगी | \n 9. बेगूँ दर्शन एप पर विभिन्न राशि के विज्ञापन भी दिए जा सकते है | विज्ञापन देने के लिए भी आप ईमेल द्वारा अथवा व्हाट्सप्प द्वारा संपर्क कर सकते हैं | \n 10. अगर आप किसी और का विज्ञापन लाते हैं तो आपको उचित मात्रा का कमीशन भी दिया जाएगा | \n 11. बेगूँ दर्शन मात्र एक तकनीकी मंच है और हमें विभिन्न सूत्रों द्वारा अख़बार, विज्ञापन आदि मिलते हैं , यद्यपि बेगूँ दर्शन की टीम इस पर प्रदर्शित होने वाली सभी सामग्री की परख करेगी परन्तु किसी त्रुटि की अवस्था में बेगूँ दर्शन की कोई ज़िम्मेदारी नहीं मानी जायेगी | \n 12. अगर आपको एप पर उपलब्ध किसी सामग्री से आपत्ति हो तो आप ईमेल द्वारा शिकायत कर सकते है | उस पर अतिशीघ्र निर्णय की कोशिश की जायेगी | \n 13. आप हमारे फेसबुक पेज (बेगूँ दर्शन) द्वारा भी हम से जुड़े रह सकते है, हमारा फेसबुक पेज है https://www.facebook.com/Begun-Darshan-341915086353783  \n 14. बेगूँ दर्शन का न्याय क्षेत्र बेगूँ ही माना जाएगा | \n 15. बेगूँ दर्शन का निर्माण बेगूँ क्षेत्र की सुविधा के लिए किया गया है अतः अपना सहयोग बनाये रखें |</string>
    <string name="editorialwriter">जय टेलर (हीया सॉफ्टवेयर)</string>
    <string name="importantInfo">महत्वपूर्ण जानकारी </string>
    <string name="closeButton">Close</string>
    <string name="title">बेगूँ दर्शन टीम:</string>
    <string name="title1">बेगूं दर्शन पर विज्ञापन की दरें:</string>
    <string name="contactInfo1">\n1 महीना: 200 रुपये मात्र  \n2 महीने: " " 300 रुपये मात्र \n6 महीने:" "  400 रुपये मात्र \n1 वर्ष: "     "  700 रुपये मात्र </string>
    <string name="contactInfo"> \nमहेंद्र धाकड़ : 97841 66568  \nजयेन्द्र: 96670 91127 \nविठ्ठल: 94147 31917 \nगौरव: 95874 43904 \n\nईमेल: begudarshan@gmail.com </string>
    <string name="ruleTitle">कुछ ध्यान योग्य बातें:\n</string>
    <string name="wishMessage">सन्देश</string>
    <string name="videoHeading">वीडियो </string>
    <string name="roadwaysTitle">राजस्थान परिवहन समय सारिणी, बेगूँ</string>
    <string name="otherNews">देश विदेश के समाचार</string>
    <string name="numberTitle">बेगूँ नगर के महत्वपूर्ण फोन नंबर</string>
    <string name="interstitialAdId">ca-app-pub-4734320296886796/3959680713</string>
    <string name="native_advanced_adunit_id">ca-app-pub-4734320296886796/5652075604</string>
</resources>
