<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="400dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:background="@drawable/customborder">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView android:id="@+id/goldMedal"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/begundarshanlogo"/>
        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/importantInfo"/>
        <ImageButton
            android:id="@+id/topClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:src="@drawable/close_48"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLayout"
        android:paddingTop="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:orientation="vertical">
            <TextView android:id="@+id/goldName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hyphenationFrequency="none"
                android:scrollHorizontally="false"
                android:padding="5dp"
                android:text="@string/rules"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Button android:id="@+id/popupClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/closeButton" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>