<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/teamBegun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingStart="5dp"
                    android:text="@string/title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/contactInfo"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/impNumbers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/numberTitle"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/important_numbers" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/otherNews"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="140dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/dainikBhaskar"
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_marginEnd="40dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dainik_bhaskar_logo" />

                        <ImageButton
                            android:id="@+id/dainikNavjyoti"
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dainik_navjyoti_logo" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="140dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/dainikJagran"
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_marginEnd="40dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dainik_jagaran" />

                        <ImageButton
                            android:id="@+id/rajPatrika"
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:scaleType="fitCenter"
                            android:src="@drawable/patrika" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/roadwaysTitle"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/bus_time_table" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewEditorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4734320296886796/1755662541">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>